@@ -614,3 +614,13 @@ caption {
 	color: #000;
 	font-size: 8pt;
 }
+
+.g-disabled {
+    color: grey;
+    text-align: center;
+}
+
+.g-selected {
+    font-weight: bold;
+    font-size: 10pt;
+}
